base tag for href root refs

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <link rel="canonical" href="https://frankinteriordesign.co.uk/">
     <title>Frank Interior Design</title>
 
+    <base href="https://github.io/d3nd3/frank/" target="_blank">
+
     <script>
       function logo_has_loaded() {
         document.getElementsByClassName("circle")[0].style.backgroundImage =  "url(\"img/logo.jpg\")";
@@ -106,7 +108,7 @@
       </section>
     </div>
     <footer class="real_footer">
-      <span>© Frank Interior Design 2018</span>
+      <span>© Frank Interior Design 2023</span>
       <span id="social">
       <a href="https://www.instagram.com/frank_interior_design/"><img src="img/s1.png" alt="" width="28" height="28"></a>
       <a href="https://twitter.com/studio_at_frank"><img src="img/s2.png" alt="" width="28" height="28"></a>
