--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="canonical" href="https://frankinteriordesign.co.uk/">
     <title>Frank Interior Design</title>
 
-    <base href="https://github.io/d3nd3/frank/" target="_blank">
+    <base href="https://github.io/d3nd3/frank-2/" target="_blank">
 
     <script>
       function logo_has_loaded() {
