html folder organise

--- a/html/contact.html
+++ b/html/contact.html
@@ -11,10 +11,11 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ebdb01">
     <meta name="theme-color" content="#ebdb01">
     
-    <link rel="canonical" href="https://frankinteriordesign.co.uk/thescaffoldgarden.html">
+    <!-- <link rel="canonical" href="https://frankinteriordesign.co.uk/contact.html"> -->
     <title>Frank Interior Design</title>
   </head>
   <body>
@@ -28,20 +29,38 @@
       </nav>
     </header>
     <div id="content">
-      <div class="meat onewidprojs">
-        <div class="full-width-elems">
-          <img src="img/the_scaffold_garden/laura_fenner1.jpg" alt="" width="500" height="760">
-        </div>
-        <div class="full-width-elems">
-          <img src="img/the_scaffold_garden/laura_fenner.jpg" alt="" width="500" height="760">
-        </div>
-        <div class="full-width-elems">
-          <img src="img/the_scaffold_garden/more_pots.jpg" alt="" width="760" height="600">
-        </div>
-        <div class="full-width-elems">
-          <img src="img/the_scaffold_garden/plant_pots.jpg" alt="" width="760" height="400">
-        </div>
-      </div>
+      <section class="meat" id="contact">
+        <h1>
+          Get in Contact.
+        </h1>
+        <p>
+          Frank Interior Design is based in South London.
+        </p>
+        <h2>
+          Email
+        </h2>
+        <p>
+          studio@frankinteriordesign.co.uk
+        </p>
+        <h2>
+          Phone.
+        </h2>
+        <p>
+          +44(0)78 4994 3964
+        </p>
+        <h2>
+          Instagram.
+        </h2>
+        <p>
+          frank_interior_design
+        </p>
+        <h2>
+          Twitter.
+        </h2>
+        <p>
+          studio_at_frank
+        </p>
+      </section>
     </div>
     <footer class="real_footer">
       <span>© Frank Interior Design 2018</span>
