--- a/html/parisiancafe.html
+++ b/html/parisiancafe.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <base href="/frank-2/">
+    <link rel="manifest" href="/manifest.json">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -8,11 +11,11 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
+    
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ebdb01">
     <meta name="theme-color" content="#ebdb01">
     
-    <link rel="canonical" href="https://frankinteriordesign.co.uk/contact.html">
+    <!-- <link rel="canonical" href="https://frankinteriordesign.co.uk/parisiancafe.html"> -->
     <title>Frank Interior Design</title>
   </head>
   <body>
@@ -20,44 +23,23 @@
       <nav>
         <ul>
           <li><a href="/">about</a></li>
-          <li><a href="portfolio.html">work</a></li>
-          <li><a href="contact.html" rel="author">contact</a></li>
+          <li><a href="html/portfolio.html">work</a></li>
+          <li><a href="html/contact.html" rel="author">contact</a></li>
         </ul>
       </nav>
     </header>
     <div id="content">
-      <section class="meat" id="contact">
-        <h1>
-          Get in Contact.
-        </h1>
-        <p>
-          Frank Interior Design is based in South London.
-        </p>
-        <h2>
-          Email
-        </h2>
-        <p>
-          studio@frankinteriordesign.co.uk
-        </p>
-        <h2>
-          Phone.
-        </h2>
-        <p>
-          +44(0)78 4994 3964
-        </p>
-        <h2>
-          Instagram.
-        </h2>
-        <p>
-          frank_interior_design
-        </p>
-        <h2>
-          Twitter.
-        </h2>
-        <p>
-          studio_at_frank
-        </p>
-      </section>
+      <div class="meat onewidprojs">
+        <div class="full-width-elems">
+          <img src="img/parisian_cafe/main_visual.jpg" alt="" width="760" height="539">
+        </div>
+        <div class="full-width-elems">
+          <img src="img/parisian_cafe/vignette1.jpg" alt="" width="760" height="539">
+        </div>
+        <div class="full-width-elems">
+          <img src="img/parisian_cafe/vignette2.jpg" alt="" width="760" height="539">
+        </div>
+      </div>
     </div>
     <footer class="real_footer">
       <span>© Frank Interior Design 2018</span>
