--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base href="https://d3nd3.github.io/frank-2/" target="_blank">
+    
+    <base href="/frank-2/">
+    <link rel="manifest" href="/manifest.json">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <link rel="manifest" href="/manifest.json">
+    
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -15,8 +17,8 @@
 
     <meta name="theme-color" content="#ebdb01">
 
-    <link rel="prefetch" href="contact.html">
-    <link rel="prefetch" href="portfolio.html">
+    <link rel="prefetch" href="html/contact.html">
+    <link rel="prefetch" href="html/portfolio.html">
     <link rel="prefetch" href="img/portfolio/artys.jpg">
     <link rel="prefetch" href="img/portfolio/kent.jpg">
     <link rel="prefetch" href="img/portfolio/mangobean.jpg">
@@ -46,8 +48,8 @@
       <nav>
         <ul>
           <li><a href="/">about</a></li>
-          <li><a href="portfolio.html">work</a></li>
-          <li><a href="contact.html" rel="author">contact</a></li>
+          <li><a href="html/portfolio.html">work</a></li>
+          <li><a href="html/contact.html" rel="author">contact</a></li>
         </ul>
       </nav>
     </header>
