--- a/html/artys.html
+++ b/html/artys.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <base href="/frank-2/">
+    <link rel="manifest" href="/manifest.json">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ebdb01">
     <meta name="theme-color" content="#ebdb01">
     
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="canonical" href="https://frankinteriordesign.co.uk/artys.html">
+    <!-- <link rel="canonical" href="https://frankinteriordesign.co.uk/artys.html"> -->
     <title>Frank Interior Design</title>
   </head>
   <body>
@@ -20,8 +22,8 @@
       <nav>
         <ul>
           <li><a href="/">about</a></li>
-          <li><a href="portfolio.html">work</a></li>
-          <li><a href="contact.html" rel="author">contact</a></li>
+          <li><a href="html/portfolio.html">work</a></li>
+          <li><a href="html/contact.html" rel="author">contact</a></li>
         </ul>
       </nav>
     </header>
