--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <base href="/frank-2/">
+    <link rel="manifest" href="/manifest.json">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -8,11 +11,10 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ebdb01">
     <meta name="theme-color" content="#ebdb01">
 
-    <link rel="prefetch" href="thegingerpig.html">
+    <link rel="prefetch" href="html/thegingerpig.html">
     <link rel="prefetch" href="img/the_ginger_pig/gp_01.jpg">
     <link rel="prefetch" href="img/the_ginger_pig/gp_02.jpg">
     <link rel="prefetch" href="img/the_ginger_pig/gp_03.jpg">
@@ -23,7 +25,7 @@
     <link rel="prefetch" href="img/the_ginger_pig/gp_08.jpg">
     <link rel="prefetch" href="img/the_ginger_pig/gp_09.jpg">
     
-    <link rel="prefetch" href="artys.html">
+    <link rel="prefetch" href="html/artys.html">
     <link rel="prefetch" href="img/artys/approachclose.jpg">
     <link rel="prefetch" href="img/artys/graphics.jpg">
     <link rel="prefetch" href="img/artys/materials.jpg">
@@ -32,7 +34,7 @@
     <link rel="prefetch" href="img/artys/serveryapproach.jpg">
     <link rel="prefetch" href="img/artys/serveryarea.jpg">
 
-    <link rel="prefetch" href="gardenkent.html">
+    <link rel="prefetch" href="html/gardenkent.html">
     <link rel="prefetch" href="img/garden_kent/iso1.jpg">
     <link rel="prefetch" href="img/garden_kent/iso2.jpg">
     <link rel="prefetch" href="img/garden_kent/plan.jpg">
@@ -40,7 +42,7 @@
     <link rel="prefetch" href="img/garden_kent/view2.jpg">
     <link rel="prefetch" href="img/garden_kent/view2night.jpg">
 
-    <link rel="prefetch" href="mangobean.html">
+    <link rel="prefetch" href="html/mangobean.html">
     <link rel="prefetch" href="img/mangobean/exterior.jpg">
     <link rel="prefetch" href="img/mangobean/interior1.jpg">
     <link rel="prefetch" href="img/mangobean/interior2.jpg">
@@ -50,18 +52,18 @@
     <link rel="prefetch" href="img/mangobean/materials.jpg">
     <link rel="prefetch" href="img/mangobean/moodboard.jpg">
 
-    <link rel="prefetch" href="parisiancafe.html">
+    <link rel="prefetch" href="html/parisiancafe.html">
     <link rel="prefetch" href="img/parisian_cafe/main_visual.jpg">
     <link rel="prefetch" href="img/parisian_cafe/vignette1.jpg">
     <link rel="prefetch" href="img/parisian_cafe/vignette2.jpg">
 
-    <link rel="prefetch" href="thescaffoldgarden.html">
+    <link rel="prefetch" href="html/thescaffoldgarden.html">
     <link rel="prefetch" href="img/the_scaffold_garden/elder_street.jpg">
     <link rel="prefetch" href="img/the_scaffold_garden/laura_fenner.jpg">
     <link rel="prefetch" href="img/the_scaffold_garden/laura_fenner1.jpg">
     <link rel="prefetch" href="img/the_scaffold_garden/more_pots.jpg">
     <link rel="prefetch" href="img/the_scaffold_garden/plant_pots.jpg">
-    <link rel="canonical" href="https://frankinteriordesign.co.uk/portfolio.html">
+    <!-- <link rel="canonical" href="https://frankinteriordesign.co.uk/portfolio.html"> -->
     <title>Frank Interior Design</title>
   </head>
   <body>
@@ -69,46 +71,46 @@
       <nav>
         <ul>
           <li><a href="/">about</a></li>
-          <li><a href="portfolio.html">work</a></li>
-          <li><a href="contact.html" rel="author">contact</a></li>
+          <li><a href="html/portfolio.html">work</a></li>
+          <li><a href="html/contact.html" rel="author">contact</a></li>
         </ul>
       </nav>
     </header>
     <div id="content">
       <div class="meat" id="portfolio">
         <div class="portobj"> 
-          <a href="thegingerpig.html">    
+          <a href="html/thegingerpig.html">    
             <img src="img/portfolio/the_ginger_pig.jpg" alt="" width="760" height="532">
             <p>The Ginger Pig, Guildford</p>
           </a>
           
         </div>
         <div class="portobj">   
-          <a href="parisiancafe.html">
+          <a href="html/parisiancafe.html">
             <img src="img/portfolio/parisian_cafe.jpg" alt="" width="760" height="532">
             <p>Brasserie, Gatwick</p>
           </a>
         </div>
         <div class="portobj">
-          <a href="mangobean.html">  
+          <a href="html/mangobean.html">  
             <img src="img/portfolio/mangobean.jpg" alt="" width="760" height="532">
             <p>Mangobean Coffee, Rebrand</p>
           </a>
         </div>
         <div class="portobj">
-          <a href="thescaffoldgarden.html">
+          <a href="html/thescaffoldgarden.html">
             <img src="img/portfolio/the_scaffold_garden.jpg" alt="" width="760" height="532">
             <p>The Scaffold Garden, London</p>
           </a>
         </div>
         <div class="portobj">
-          <a href="artys.html">
+          <a href="html/artys.html">
             <img src="img/portfolio/artys.jpg" alt="" width="760" height="532">
             <p>Arty's Cafe, London</p>
           </a>
         </div>
         <div class="portobj">
-          <a href="gardenkent.html">
+          <a href="html/gardenkent.html">
             <img src="img/portfolio/kent.jpg" alt="" width="760" height="532">
             <p>Garden Proposal, Kent</p>
           </a>
