--- a/html/thescaffoldgarden.html
+++ b/html/thescaffoldgarden.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <base href="/frank-2/">
+    <link rel="manifest" href="/manifest.json">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -8,42 +11,35 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ebdb01">
     <meta name="theme-color" content="#ebdb01">
     
-    <link rel="canonical" href="https://frankinteriordesign.co.uk/gardenkent.html">
+    <!-- <link rel="canonical" href="https://frankinteriordesign.co.uk/thescaffoldgarden.html"> -->
     <title>Frank Interior Design</title>
   </head>
   <body>
     <header>
       <nav>
         <ul>
-          <li><a href="/">home</a></li>
-          <li><a href="portfolio.html">work</a></li>
-          <li><a href="contact.html" rel="author">contact</a></li>
+          <li><a href="/">about</a></li>
+          <li><a href="html/portfolio.html">work</a></li>
+          <li><a href="html/contact.html" rel="author">contact</a></li>
         </ul>
       </nav>
     </header>
     <div id="content">
       <div class="meat onewidprojs">
         <div class="full-width-elems">
-          <img src="img/garden_kent/plan.jpg" alt="" width="733" height="447">
+          <img src="img/the_scaffold_garden/laura_fenner1.jpg" alt="" width="500" height="760">
         </div>
         <div class="full-width-elems">
-          <img src="img/garden_kent/iso1.jpg" alt="" width="760" height="372">
+          <img src="img/the_scaffold_garden/laura_fenner.jpg" alt="" width="500" height="760">
         </div>
         <div class="full-width-elems">
-          <img src="img/garden_kent/iso2.jpg" alt="" width="760" height="372">
+          <img src="img/the_scaffold_garden/more_pots.jpg" alt="" width="760" height="600">
         </div>
         <div class="full-width-elems">
-          <img src="img/garden_kent/view1.jpg" alt="" width="760" height="372">
-        </div>
-        <div class="full-width-elems">
-          <img src="img/garden_kent/view2.jpg" alt="" width="760" height="372">
-        </div>
-        <div class="full-width-elems">
-          <img src="img/garden_kent/view2night.jpg" alt="" width="760" height="372">
+          <img src="img/the_scaffold_garden/plant_pots.jpg" alt="" width="760" height="400">
         </div>
       </div>
     </div>
