--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
-    <base href="/frank-2/">
-    <link rel="manifest" href="/manifest.json">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ebdb01">
+    <link rel="manifest" href="./manifest.json">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#ebdb01">
 
     <meta name="theme-color" content="#ebdb01">
 
@@ -25,7 +22,7 @@
     <link rel="prefetch" href="img/portfolio/parisian_cafe.jpg">
     <link rel="prefetch" href="img/portfolio/the_ginger_pig.jpg">
     <link rel="prefetch" href="img/portfolio/the_scaffold_garden.jpg">
-    <link rel="canonical" href="https://frankinteriordesign.co.uk/">
+    <!-- <link rel="canonical" href="https://frankinteriordesign.co.uk/"> -->
     <title>Frank Interior Design</title>
 
     <script>
