--- a/html/mangobean.html
+++ b/html/mangobean.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base href="/frank-2/">
-    <link rel="manifest" href="/manifest.json">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ebdb01">
+    <link rel="manifest" href="../manifest.json">
+    <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+    <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#ebdb01">
     <meta name="theme-color" content="#ebdb01">
     
     <!-- <link rel="canonical" href="https://frankinteriordesign.co.uk/mangobean.html"> -->
@@ -21,37 +20,37 @@
     <header>
       <nav>
         <ul>
-          <li><a href="/">about</a></li>
-          <li><a href="html/portfolio.html">work</a></li>
-          <li><a href="html/contact.html" rel="author">contact</a></li>
+          <li><a href="../">about</a></li>
+          <li><a href="portfolio.html">work</a></li>
+          <li><a href="contact.html" rel="author">contact</a></li>
         </ul>
       </nav>
     </header>
     <div id="content">
       <div class="meat onewidprojs">
         <div class="full-width-elems">
-          <img src="img/mangobean/moodboard.jpg" alt="" width="760" height="352">
+          <img src="../img/mangobean/moodboard.jpg" alt="" width="760" height="352">
         </div>
         <div class="full-width-elems">
-          <img src="img/mangobean/materials.jpg" alt="" width="760" height="445">
+          <img src="../img/mangobean/materials.jpg" alt="" width="760" height="445">
         </div>
         <div class="full-width-elems">
-          <img src="img/mangobean/lighting.jpg" alt="" width="760" height="352">
+          <img src="../img/mangobean/lighting.jpg" alt="" width="760" height="352">
         </div>
         <div class="full-width-elems">
-          <img src="img/mangobean/exterior.jpg" alt="" width="760" height="352">
+          <img src="../img/mangobean/exterior.jpg" alt="" width="760" height="352">
         </div>
         <div class="full-width-elems">
-          <img src="img/mangobean/interior1.jpg" alt="" width="760" height="352">
+          <img src="../img/mangobean/interior1.jpg" alt="" width="760" height="352">
         </div>
         <div class="full-width-elems">
-          <img src="img/mangobean/interior2.jpg" alt="" width="760" height="352">
+          <img src="../img/mangobean/interior2.jpg" alt="" width="760" height="352">
         </div>
         <div class="full-width-elems">
-          <img src="img/mangobean/interior3.jpg" alt="" width="760" height="352">
+          <img src="../img/mangobean/interior3.jpg" alt="" width="760" height="352">
         </div>
         <div class="full-width-elems">
-          <img src="img/mangobean/interior4.jpg" alt="" width="760" height="352">
+          <img src="../img/mangobean/interior4.jpg" alt="" width="760" height="352">
         </div>
       </div>
     </div>
