--- a/html/thescaffoldgarden.html
+++ b/html/thescaffoldgarden.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base href="/frank-2/">
-    <link rel="manifest" href="/manifest.json">
-
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ebdb01">
     <meta name="theme-color" content="#ebdb01">
     
@@ -21,34 +20,34 @@
     <header>
       <nav>
         <ul>
-          <li><a href="/">about</a></li>
-          <li><a href="html/portfolio.html">work</a></li>
-          <li><a href="html/contact.html" rel="author">contact</a></li>
+          <li><a href="../">about</a></li>
+          <li><a href="portfolio.html">work</a></li>
+          <li><a href="contact.html" rel="author">contact</a></li>
         </ul>
       </nav>
     </header>
     <div id="content">
       <div class="meat onewidprojs">
         <div class="full-width-elems">
-          <img src="img/the_scaffold_garden/laura_fenner1.jpg" alt="" width="500" height="760">
+          <img src="../img/the_scaffold_garden/laura_fenner1.jpg" alt="" width="500" height="760">
         </div>
         <div class="full-width-elems">
-          <img src="img/the_scaffold_garden/laura_fenner.jpg" alt="" width="500" height="760">
+          <img src="../img/the_scaffold_garden/laura_fenner.jpg" alt="" width="500" height="760">
         </div>
         <div class="full-width-elems">
-          <img src="img/the_scaffold_garden/more_pots.jpg" alt="" width="760" height="600">
+          <img src="../img/the_scaffold_garden/more_pots.jpg" alt="" width="760" height="600">
         </div>
         <div class="full-width-elems">
-          <img src="img/the_scaffold_garden/plant_pots.jpg" alt="" width="760" height="400">
+          <img src="../img/the_scaffold_garden/plant_pots.jpg" alt="" width="760" height="400">
         </div>
       </div>
     </div>
     <footer class="real_footer">
       <span>© Frank Interior Design 2018</span>
       <span id="social">
-      <a href="https://www.instagram.com/frank_interior_design/"><img src="img/s1.png" alt="" width="28" height="28"></a>
-      <a href="https://twitter.com/studio_at_frank"><img src="img/s2.png" alt="" width="28" height="28"></a>
-      <a href="https://linkedin.com/company/11110927"><img src="img/s3.png" alt="" width="28" height="28"></a>
+      <a href="https://www.instagram.com/frank_interior_design/"><img src="../img/s1.png" alt="" width="28" height="28"></a>
+      <a href="https://twitter.com/studio_at_frank"><img src="../img/s2.png" alt="" width="28" height="28"></a>
+      <a href="https://linkedin.com/company/11110927"><img src="../img/s3.png" alt="" width="28" height="28"></a>
       </span>
     </footer>
   </body>
