more rel url fix2

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -91,19 +91,19 @@
         </div>
         <div class="portobj">
           <a href="mangobean.html">  
-            <img src="img/portfolio/mangobean.jpg" alt="" width="760" height="532">
+            <img src="../img/portfolio/mangobean.jpg" alt="" width="760" height="532">
             <p>Mangobean Coffee, Rebrand</p>
           </a>
         </div>
         <div class="portobj">
           <a href="thescaffoldgarden.html">
-            <img src="img/portfolio/the_scaffold_garden.jpg" alt="" width="760" height="532">
+            <img src="../img/portfolio/the_scaffold_garden.jpg" alt="" width="760" height="532">
             <p>The Scaffold Garden, London</p>
           </a>
         </div>
         <div class="portobj">
           <a href="artys.html">
-            <img src="img/portfolio/artys.jpg" alt="" width="760" height="532">
+            <img src="../img/portfolio/artys.jpg" alt="" width="760" height="532">
             <p>Arty's Cafe, London</p>
           </a>
         </div>
