--- a/html/thegingerpig.html
+++ b/html/thegingerpig.html
@@ -15,7 +15,7 @@
     <!-- <link rel="canonical" href="https://frankinteriordesign.co.uk/thegingerpig.html"> -->
     <title>Frank Interior Design</title>
 
-    <script type="application/javascript" src="lib/all.js" async></script>
+    <script type="application/javascript" src="../lib/all.js" async></script>
     <!--  <script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
