--- a/html/mangobean.html
+++ b/html/mangobean.html
@@ -57,9 +57,9 @@
     <footer class="real_footer">
       <span>© Frank Interior Design 2018</span>
       <span id="social">
-      <a href="https://www.instagram.com/frank_interior_design/"><img src="img/s1.png" alt="" width="28" height="28"></a>
-      <a href="https://twitter.com/studio_at_frank"><img src="img/s2.png" alt="" width="28" height="28"></a>
-      <a href="https://linkedin.com/company/11110927"><img src="img/s3.png" alt="" width="28" height="28"></a>
+      <a href="https://www.instagram.com/frank_interior_design/"><img src="../img/s1.png" alt="" width="28" height="28"></a>
+      <a href="https://twitter.com/studio_at_frank"><img src="../img/s2.png" alt="" width="28" height="28"></a>
+      <a href="https://linkedin.com/company/11110927"><img src="../img/s3.png" alt="" width="28" height="28"></a>
       </span>
     </footer>
   </body>
