--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <link rel="manifest" href="./manifest.json">
+    <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -44,7 +44,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="/">about</a></li>
+          <li><a href="./">about</a></li>
           <li><a href="html/portfolio.html">work</a></li>
           <li><a href="html/contact.html" rel="author">contact</a></li>
         </ul>
